# Coding_skill

./: CLAUDE.md  README.md
.claude/skills/: bug-fixer.md  code-reviewer.md  dev-assistant.md  doc-generator.md  git-workflow.md  scaffold.md  test-helper.md  todo.md
.claude/skills/examples/: README.md
.claude/skills/examples/app/: task_app.py
.claude/skills/examples/scripts/: task.sh
.claude/skills/examples/src/robot/config/: defaults.yaml
.claude/skills/examples/src/robot/core/: __init__.py
.claude/skills/examples/src/robot/interface/: __init__.py
.claude/skills/examples/tests/: monitor.py  test_task.py
.claude/skills/prompts/: doc-templates.md
.opencode/: opencode.jsonc
.opencode/agents/: bug-fixer.md  code-reviewer.md  doc-generator.md  git-workflow.md  scaffold.md  test-helper.md
.opencode/commands/: docs.md  fix.md  init.md  release.md  review.md  test.md  todo.md
.opencode/examples/mini-task-executor/: README.md  demo_task.json  pyproject.toml
.opencode/examples/mini-task-executor/src/: main.py
.opencode/examples/mini-task-executor/src/config/: defaults.yaml  loader.py
.opencode/examples/mini-task-executor/src/hardware/: interface.py  mock.py  real.py
.opencode/examples/mini-task-executor/src/task/: executor.py  parser.py  schema.py
.opencode/examples/mini-task-executor/tests/: monitor.py  test_executor.py  test_parser.py
.opencode/prompts/: bug-workflow.md
.opencode/skills/dev-assistant/: SKILL.md
docs/design/dev-assistant-skill/: data-flow.md  design-rationale.md  interface.md  overview.md  pipeline.md
(+1 files in other folders)
